Fix image alignment

--- a/web/html/src/branding/css/base/setup-wizard.scss
+++ b/web/html/src/branding/css/base/setup-wizard.scss
@@ -147,6 +147,7 @@ body {
 
     img {
       margin: 1em auto;
+      display: block;
     }
   }
 
